IntelliI analyzer-driven clean up